# big

./: .gitignore  Makefile  pyproject.toml
.claude/: settings.local.json
_bmad/: config.toml  config.user.toml
_bmad-output/: workflow-status.yaml
_bmad-output/brainstorming/: brainstorming-session-2026-05-17-121344.md
_bmad-output/implementation-artifacts/: spec-prototype-3dic-checkout-target.md  spec-prototype-3dic-workroots.md  spec-prototype-audit-hash-chain.md  spec-prototype-branch-acl.md  spec-prototype-branch-events.md  spec-prototype-branch-metadata.md  spec-prototype-branch-show.md  spec-prototype-candidate-outbox.md  spec-prototype-capture-evidence.md  spec-prototype-cas-readonly.md  spec-prototype-checkout-context.md  spec-prototype-checkout-materialize.md  spec-prototype-checkout-plan.md  spec-prototype-checkout-print-path.md  spec-prototype-checkout-version-new-branch.md  spec-prototype-cli-help.md  spec-prototype-cli-vertical-slice.md  spec-prototype-cross-branch-consumes.md  spec-prototype-derived-from-lineage.md  spec-prototype-diff-summary.md  spec-prototype-impact.md  spec-prototype-lineage-changes.md  spec-prototype-lineage-depth-alias.md  spec-prototype-lineage-details.md  spec-prototype-lineage-parent-chain.md  spec-prototype-managed-lease-run.md  (+15 more)
chat/: 260517.md  260519.md  260520.md  260521.md  260522.md  260525.md  260526.md  260528.md  260529.md  260530.md  260601.md
docs/: manual-test-prototype.md
src/big/: cas.py  (+4 more)
tests/: test_cas.py  test_cli_prototype.py  test_manual_lab_tool.py
tools/: create_manual_lab.py  run_manual_smoke.py
(+11 files in other folders)
